<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Books Library</string>
    <string name="search_title_str">Search Books</string>
    <string name="list_tab_title">List</string>
    <string name="grid_tab_title">Grid</string>
    <string name="search_settings_title_str">Search Settings</string>
    <string name="search_keyword_filter_title_str">Search Keyword Filters</string>
    <string name="clear_search_history_title_str">Clear Search History</string>
    <string name="search_hint_text">Books or Authors</string>
    <string name="searched_book_title" translatable="false">
        
        Find: <xliff:g example="Harry Potter" id="query_as_title">%1$s</xliff:g>
    </string>
    <string name="keyword_filter_search_usage_error">Needs to be used while Searching</string>
    <string name="search_keyword_filters_dialog_msg_text">Search Keyword filters to refine your search</string>
    <string name="search_suggestions_cleared_msg">Recent search history cleared</string>
    <string name="page_number_picker_cancel_button_text">Cancel</string>
    <string name="page_number_picker_set_button_text">Set</string>
    <string name="page_number_picker_title_text">Jump to Page</string>
    <string name="navigate_page_first_msg">Loading the First page…</string>
    <string name="navigate_page_last_msg">Loading the Last page…</string>
    <string name="navigate_page_x_msg">Loading Page <xliff:g example="1" id="page_number">%1$d</xliff:g>…</string>
    <string name="navigate_page_sel_msg">Loading Selected Page <xliff:g example="1" id="page_number">%1$d</xliff:g>…</string>
    <string name="restoring_page_msg">
        Restoring Page <xliff:g example="1" id="page_number">%1$d</xliff:g> as the requested Page <xliff:g example="2" id="page_number">%2$d</xliff:g> has no data
    </string>
    <string name="pref_filter_results_category_title">Filter Results</string>
    <string name="pref_sort_results_category_title">Sort Results</string>
    <string name="pref_pagination_category_title">Pagination</string>
    <string name="pref_defaults_category_title">Defaults</string>
    <string name="pref_publication_type_key" translatable="false">printType</string>
    <string name="pref_publication_type_title">Publication Type</string>
    <string name="pref_publication_type_default" translatable="false">all</string>
    <string name="pref_publication_type_dialog_title">Select an option to display the results accordingly</string>
    <string name="pref_content_type_key" translatable="false">filter</string>
    <string name="pref_content_type_title">Content Type</string>
    <string name="pref_content_type_default" translatable="false">none</string>
    <string name="pref_content_type_dialog_title">Select an option to restrict the results accordingly</string>
    <string name="pref_sort_by_key" translatable="false">orderBy</string>
    <string name="pref_sort_by_title">Sort By</string>
    <string name="pref_sort_by_default" translatable="false">relevance</string>
    <string name="pref_sort_by_dialog_title">Select on how you wish the results to be sorted</string>
    <string name="pref_page_to_display_key" translatable="false">startIndex</string>
    <string name="pref_page_to_display_max_value_key" translatable="false">endIndex</string>
    <string name="pref_page_to_display_title">Page to Display</string>
    <string name="pref_results_per_page_key" translatable="false">maxResults</string>
    <string name="pref_results_per_page_title">Results per page</string>
    <string name="pref_reset_settings_key" translatable="false">reset</string>
    <string name="pref_reset_settings_title">Reset Settings</string>
    <string name="pref_reset_settings_dialog_msg">Reset all to defaults?</string>
    <string name="pref_reset_settings_default" translatable="false">false</string>
    <string name="pref_last_displayed_page_key" translatable="false">lastViewedIndex</string>
    <string name="rating_open_brace_text" translatable="false">(</string>
    <string name="rating_close_brace_text" translatable="false">)</string>
    <string name="pages_book_type">
        
        <xliff:g example="100" id="page_count">%1$d</xliff:g> Pages <xliff:g example="Magazine" id="book_type">%2$s</xliff:g>
    </string>
    <string name="no_categories_found_default_text">Unknown Category</string>
    <string name="no_authors_found_default_text">Anonymous</string>
    <string name="not_for_sale_price_text">NOT FOR SALE</string>
    <string name="no_published_date_default_text">Unknown Date</string>
    <string name="no_publisher_found_default_text">Unknown Publisher</string>
    <string name="book_detail_title_str">Book Details</string>
    <string name="by_author_text" translatable="false">
        
        by <xliff:g example="by Shakespeare" id="by_author">%1$s</xliff:g>
    </string>
    <string name="no_description_found_default_text">No Description available</string>
    <string name="detail_publisher_section_subtitle">Published by</string>
    <string name="detail_publisher_section_format" translatable="false">
        
        <xliff:g example="Pottermore Publishing" id="publisher_name">%1$s</xliff:g>\n(<xliff:g example="December 8, 2015" id="published_date_string">%2$s</xliff:g>)
    </string>
    <string name="detail_category_section_subtitle">Under Categories</string>
    <string name="detail_description_section_subtitle">Description</string>
    <string name="detail_samples_section_subtitle">Sample Previews</string>
    <string name="web_preview_button_text">Web</string>
    <string name="detail_info_button_text">Info</string>
    <string name="no_book_image_msg">Do not have any Image of this Book to display</string>
    <string name="welcome_page_textline_1">Welcome to the Books Library App!</string>
    <string name="welcome_page_textline_2">Fill this space with the books of your choice by searching them.</string>
    <string name="welcome_page_textline_3">Use the search icon [ic_search_primary] to begin the search.</string>
    <string name="no_result_content_title_text">0H N0!</string>
    <string name="no_result_page_textline_1">&lt;b&gt;Zero books&lt;/b&gt; were returned for the search entry &lt;b&gt;\"<xliff:g example="Shakespeare12345" id="search_entry">%1$s</xliff:g>\"&lt;/b&gt;</string>
    <string name="no_result_page_textline_2">Re-validate your search query + search settings and then try again. If it fails again, then at the moment we do not have any book related to your search query.</string>
    <string name="no_result_page_textline_3">Apologies for the inconvenience caused. Do visit us sometime later, to check for the book currently unavailable.</string>
    <string name="network_error_title_text">Network Error</string>
    <string name="network_error_text_msg">Seems like there is an issue with the network connectivity.\n\nCheck whether the Airplane mode is Active, [ic_airplanemode_active_primary] may be seen in the above status bar. Turn this OFF if it is seen.\n\nValidate the Network settings and visit us back once done.</string>
    <string name="network_error_cancel_button_text">Cancel</string>
    <string name="network_error_settings_button_text">Check Settings</string>
    <string name="book_image_title_str">Book Image</string>
    <string name="about_title_str">About</string>
    <string name="abt_content_textline_1">Books Library App</string>
    <string name="abt_content_textline_2">App designed and developed by &lt;b&gt;Kaushik N Sanji&lt;/b&gt; as part of the project coursework done for the &lt;b&gt;Android Basics Nanodegree&lt;/b&gt; course offered by &lt;b&gt;Udacity&lt;/b&gt;. All the decorative awesomeness were grabbed from somewhere in the Internet.</string>
    <string name="abt_content_textline_3">App is basically designed as a client to the Google Books. It only can execute book search and display the results returned, with all the awesomeness.</string>
    <string name="google_books_api_link" translatable="false">https://developers.google.com/books</string>
    <string name="udacity_course_link" translatable="false">https://in.udacity.com/course/android-basics-nanodegree-by-google--nd803-infn2</string>
    <string name="github_profile_link" translatable="false">https://github.com/kaushiknsanji</string>
    <string name="linkedin_profile_link" translatable="false">https://www.linkedin.com/in/kaushiknsanji</string>
</resources>