<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/welcome_page_content_margin">

    <ImageView
        android:id="@+id/app_icon_image_id"
        style="@style/ConstraintCenterHorizontalStyle"
        android:layout_width="@dimen/match_constraint_0dp"
        android:layout_height="@dimen/match_constraint_0dp"
        app:layout_constraintBottom_toTopOf="@+id/welcome_card_id"
        app:layout_constraintDimensionRatio="4:2"
        app:srcCompat="@drawable/ic_bookshelf_cloud" />

    <android.support.v7.widget.CardView
        android:id="@+id/welcome_card_id"
        style="@style/CenteredBookTileCardViewStyle"
        android:layout_width="@dimen/match_constraint_0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/welcome_card_margin_right"
        android:layout_marginLeft="@dimen/welcome_card_margin_left"
        android:layout_marginRight="@dimen/welcome_card_margin_right"
        android:layout_marginStart="@dimen/welcome_card_margin_left"
        app:layout_constraintVertical_bias="0.7">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/welcome_card_content_margin">

            <TextView
                android:id="@+id/welcome_text_1_id"
                style="@style/WelcomePageTitleTextStyle"
                android:text="@string/welcome_page_textline_1"
                app:layout_constraintBottom_toTopOf="@+id/welcome_text_2_id"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/welcome_text_2_id"
                style="@style/WelcomePageContentTextStyle"
                android:text="@string/welcome_page_textline_2"
                app:layout_constraintBottom_toTopOf="@+id/welcome_text_3_id"
                app:layout_constraintTop_toBottomOf="@id/welcome_text_1_id" />

            <TextView
                android:id="@+id/welcome_text_3_id"
                style="@style/WelcomePageContentTextStyle"
                android:bufferType="spannable"
                android:text="@string/welcome_page_textline_3"
                app:layout_constraintBottom_toTopOf="@+id/branding_image_id"
                app:layout_constraintTop_toBottomOf="@id/welcome_text_2_id" />

            <ImageView
                android:id="@+id/branding_image_id"
                style="@style/ConstraintBottomCenterHorizontalStyle"
                android:layout_width="@dimen/branding_image_width"
                android:layout_height="@dimen/branding_image_height"
                android:layout_marginBottom="@dimen/welcome_card_content_margin"
                android:layout_marginTop="@dimen/welcome_card_content_margin"
                app:layout_constraintTop_toBottomOf="@id/welcome_text_3_id"
                app:srcCompat="@drawable/powered_by_google_on_white" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <ImageView
        android:id="@+id/welcome_page_book_base_image_id"
        android:layout_width="@dimen/match_constraint_0dp"
        android:layout_height="@dimen/match_constraint_0dp"
        app:layout_constraintDimensionRatio="4:1"
        app:layout_constraintEnd_toEndOf="@id/welcome_card_id"
        app:layout_constraintLeft_toLeftOf="@id/welcome_card_id"
        app:layout_constraintRight_toRightOf="@id/welcome_card_id"
        app:layout_constraintStart_toStartOf="@id/welcome_card_id"
        app:layout_constraintTop_toBottomOf="@id/welcome_card_id"
        app:srcCompat="@drawable/book_shelf_with_base" />

</android.support.constraint.ConstraintLayout>