<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 Kaushik N. Sanji
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialogs_background">

    <TextView
        android:id="@+id/network_error_title_text_id"
        style="@style/ConstraintTopCenterHorizontalStyle"
        android:layout_width="@dimen/match_constraint_0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:drawableLeft="@drawable/ic_alert_orange"
        android:drawablePadding="@dimen/network_error_title_text_drawable_padding"
        android:drawableStart="@drawable/ic_alert_orange"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/network_error_title_text_padding_bottom"
        android:paddingEnd="@dimen/material_dialog_padding"
        android:paddingLeft="@dimen/material_dialog_padding"
        android:paddingRight="@dimen/material_dialog_padding"
        android:paddingStart="@dimen/material_dialog_padding"
        android:paddingTop="@dimen/material_dialog_padding"
        android:text="@string/network_error_title_text"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/no_wifi_image_id"
        style="@style/NetworkAlertImagesStyle"
        app:layout_constraintEnd_toStartOf="@+id/no_internet_image_id"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/no_internet_image_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/network_error_title_text_id"
        app:srcCompat="@drawable/ic_no_wifi_signal" />

    <ImageView
        android:id="@+id/no_internet_image_id"
        style="@style/NetworkAlertImagesStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/no_wifi_image_id"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@id/no_wifi_image_id"
        app:layout_constraintTop_toBottomOf="@+id/network_error_title_text_id"
        app:srcCompat="@drawable/ic_signal_no_internet" />

    <ScrollView
        android:id="@+id/network_error_scroll_text_id"
        style="@style/ConstraintCenterHorizontalStyle"
        android:layout_width="@dimen/match_constraint_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/network_error_scroll_text_margin_top"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/no_wifi_image_id">

        <TextView
            android:id="@+id/network_error_text_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/material_dialog_padding"
            android:layout_marginLeft="@dimen/material_dialog_padding"
            android:layout_marginRight="@dimen/material_dialog_padding"
            android:layout_marginStart="@dimen/material_dialog_padding"
            android:bufferType="spannable"
            android:gravity="start"
            android:text="@string/network_error_text_msg"
            android:textColor="@android:color/black"
            android:textSize="@dimen/network_error_text_size" />

    </ScrollView>

    <Button
        android:id="@+id/network_error_cancel_btn_id"
        style="@style/NetworkErrorButtonsStyle"
        android:layout_marginEnd="@dimen/network_error_cancel_btn_margin_right"
        android:layout_marginRight="@dimen/network_error_cancel_btn_margin_right"
        android:text="@string/network_error_cancel_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/network_error_settings_btn_id"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/network_error_settings_btn_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/network_error_scroll_text_id" />

    <Button
        android:id="@+id/network_error_settings_btn_id"
        style="@style/NetworkErrorButtonsStyle"
        android:layout_marginEnd="@dimen/network_error_settings_btn_margin_right"
        android:layout_marginLeft="@dimen/network_error_settings_btn_margin_left"
        android:layout_marginRight="@dimen/network_error_settings_btn_margin_right"
        android:layout_marginStart="@dimen/network_error_settings_btn_margin_left"
        android:text="@string/network_error_settings_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/network_error_cancel_btn_id"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@id/network_error_cancel_btn_id"
        app:layout_constraintTop_toBottomOf="@id/network_error_scroll_text_id" />

</android.support.constraint.ConstraintLayout>